RESOLVED FIXED92354
[Mac] Fix build break on Apple win bot after r123711
https://bugs.webkit.org/show_bug.cgi?id=92354
Summary [Mac] Fix build break on Apple win bot after r123711
Gyuyoung Kim
Reported 2012-07-26 02:15:04 PDT
It looks there is no return value from r123711.
Attachments
Patch (1.27 KB, patch)
2012-07-26 02:16 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2012-07-26 02:16:15 PDT
Adam Barth
Comment 2 2012-07-26 02:17:15 PDT
Comment on attachment 154586 [details] Patch Ah, thanks.
Gyuyoung Kim
Comment 3 2012-07-26 02:30:34 PDT
Alexey Proskuryakov
Comment 4 2012-07-26 09:32:02 PDT
*** Bug 92353 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.