[Mac] Fix build break on Apple win bot after r123711 https://bugs.webkit.org/show_bug.cgi?id=92354

Reviewed by Adam Barth.

Missing return value.

* WebFrame.cpp:
(WebFrame::pageNumberForElementById):

Canonical link: https://commits.webkit.org/110154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123718 268f45cc-cd09-0410-ab3c-d52691b4dbfc